--- a/html5-canvas/image-draw/index.html
+++ b/html5-canvas/image-draw/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Images and video</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="../lib/bootstrap-3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link href="styles/app.css" rel="stylesheet" media="screen">
     </head>
     <body>
