Image-draw using require.js (bug in magnifier)

--- a/html5-canvas/image-draw/index.html
+++ b/html5-canvas/image-draw/index.html
@@ -103,6 +103,6 @@
             </div>
         </div>
 
-        <script src="scripts/require.js" data-main="scripts/main"></script>
+        <script src="../lib/require.js" data-main="scripts/main"></script>
     </body>
 </html>
